# flask-blog

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pylava.ini  requirements-dev.txt  requirements.txt  run.py
.circleci/: config.yml
blog/: __init__.py  config.py  database.db  forms.py  models.py  routes.py  setup.cfg
blog/blog/: routes.py
blog/posts/: forms.py  routes.py
blog/templates/: account.html  create_update_post.html  index.html  layout.html  login.html  post.html  register.html  reset_password.html  reset_password_request.html  user_posts.html
blog/users/: forms.py  routes.py  utils.py
