# https://github.com/ayealexadams/flask-blog/

[metadata]
name = blog
version = 0.0.1
author = Alexander Michael Adams
author-email = alex.michael.adams@gmail.com
home-page = https://github.com/ayealexadams
description = simple blogging website
keywords = blog, flask, website
license = MIT

[options]
zip_safe = false
include_package_data = true
python_requires = 3.7.2
packages = blog
setup_requires =
    setuptools
install_requires =
	wtforms
    Pillow
    flask
    flask_bcrypt
    flask_login
    flask_sqlalchemy
    flask_wtf