[metadata]
name = blog
version = 0.0.1
author = Alexander Adams
author-email = alex.michael.adams@gmail.com
home-page = https://github.com/ayealexadams/flask-blog
description = flask-blog is a simple blogging website written in the microframework flask
license = MIT
keywords = blog, flask, website
classifiers =
	Programming Language :: Python :: 3.7

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
test_suite = tests
setup_requires =
    setuptools
install_requires =
    bcrypt
    Flask
    Flask-Bcrypt
    Flask-Login
    Flask-Mail
    Flask-SQLAlchemy
    Flask-WTF
    itsdangerous
    Pillow
    WTForms
